# optimize-ai-agent-memory

./: .env.example  .gitignore  README.md  example.py  pyproject.toml  requirements.txt
src/agent_memory/: agent.py  config.py
src/agent_memory/llms/: __init__.py  base.py  ollama_llm.py  openai_llm.py
src/agent_memory/strategies/: base.py  compression_consolidation.py  graph_based.py  hierarchical.py  memory_augmented_transformer.py  os_like_memory.py  retrieval.py  sequential.py  sliding_window.py  summarization.py
tests/: test_agent.py  test_strategies.py
